--- a/seckill/pom.xml
+++ b/seckill/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.1.0.RELEASE</version>
         </dependency>
+        <!-- web相关 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
