--- a/seckill/src/main/resources/db.properties
+++ b/seckill/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-user=root
+user=xuetu
 password=123
