--- a/project-configFiles/pom.xml
+++ b/project-configFiles/pom.xml
@@ -3,16 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>seckill</groupId>
-    <artifactId>seckill</artifactId>
+    <groupId>?projectName?</groupId>
+    <artifactId>?projectName?</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <dependencies>
-        <!-- 测试Junit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
         <!-- dao层相关包 -->
         <dependency>
             <groupId>com.mchange</groupId>
