--- a/springCloud/microservice-provider-user/pom.xml
+++ b/springCloud/microservice-provider-user/pom.xml
@@ -18,6 +18,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<!--<eureka.version>2.1.1.RELEASE</eureka.version>-->
 	</properties>
 
 	<dependencies>
@@ -35,11 +36,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+
 	</dependencies>
 
 </project>
