--- a/springCloud/microservice-consumer-movie/pom.xml
+++ b/springCloud/microservice-consumer-movie/pom.xml
@@ -16,7 +16,6 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<spring.version>5.1.0.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
@@ -26,18 +25,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>${eureka.version}</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
