--- a/springCloud/microservice-provider-user/pom.xml
+++ b/springCloud/microservice-provider-user/pom.xml
@@ -36,6 +36,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
+			<version>${eureka.version}</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
